--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 set(SOURCE
     src/Main.cpp
+    src/ASCIIcon.cpp
 )
 
 add_executable(asciicon ${SOURCE})
